# game-of-life-ascent

./: CMakeLists.txt  README.md  cache-preload.cmake
ascent/: ascent-trigger.patch
input/: ascent_actions.yaml  ascent_options.json
src/: CMakeLists.txt  advance.cpp  advance.h  main.cpp  take_step.cpp  take_step.h
src/gol/: CMakeLists.txt  World.cpp  World.h  ascent_insitu.cpp  ascent_insitu.h  finalize.cpp  finalize.h  initialize.cpp  initialize.h
